# sonec

./: .gitignore  LICENSE  README.md  WIKI.md  pyproject.toml
examples/bluesky/: collect_and_analyze.py  collect_and_visualize.py  status_e_consulta.py
sonec/: __init__.py  __main__.py  api.py  cli.py
sonec/core/: __init__.py  apps.py  models.py
sonec/core/migrations/: 0001_initial.py
sonec/providers/: base.py  bluesky.py  registry.py
sonec/utils/: pagination.py  time.py
tests/: test_collect.py  test_query_posts.py  test_registry.py  test_runtime_and_models.py  test_status.py  test_utils.py
tests/providers/: test_bluesky_provider.py
