[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "django-sonec"
version = "0.1.0"
description = "Social Network Collectors: Django app for generic social post collection"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  { name = "Rodrigo Motta", email = "rcorrea@inf.puc-rio.br" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: Django",
  "Framework :: Django :: 5",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed"
]
dependencies = [
  "Django>=5.0,<6.0",
  "djangorestframework>=3.15,<4.0",
  "requests>=2.31.0,<3.0",
]

[project.urls]
Source = ""
Issues = ""

[project.optional-dependencies]
# Queue runners (optional). Users install only if they need them.
celery = ["celery>=5.3", "redis>=5.0"]
rq = ["rq>=1.15.1", "redis>=5.0"]
dramatiq = ["dramatiq>=1.16.0", "redis>=5.0"]
dev = [
  "pytest>=8.0",
  "pytest-django>=4.8",
  "requests-mock>=1.11.0",
  "ruff>=0.5.0",
  "black>=24.3",
  "isort>=5.13",
]

[tool.hatch.build.targets.wheel]
packages = ["sonec"]

[tool.ruff]
line-length = 120
select = ["E","F","I","UP","B"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
