[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sonec"
version = "0.0.0"
description = "Coletor unificado de postagens de redes sociais com persistência canônica via Django e consultas internas via CLI/API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rodrigo Motta", "email" = "rcorrea@inf.puc-rio.br" }]
keywords = ["social-media", "data-collection", "django", "cli", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Framework :: Django"
]

dependencies = [
  "Django>=5.0,<6.0",
  "typer>=0.12",
  "rich>=13.0",
  "python-dotenv>=1.0",
  "dj-database-url>=2.1",
  "httpx>=0.27"
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]
dev = [
  "pytest>=8.0",
  "pytest-django>=4.8",
  "ruff>=0.5",
  "black>=24.3",
  "mypy>=1.10",
  "types-requests>=2.32",
  "ipython>=8.20"
]

[project.urls]
Homepage = "https://github.com/rodrigomotta1/sonec"
Repository = "https://github.com/rodrigomotta1/sonec"
Issues = "https://github.com/rodrigomotta1/sonec/issues"

[project.scripts]
sonec = "sonec.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sonec"]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
